Fix the horizontal scrollbar caused by background image bleed.

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -25,10 +25,13 @@ footer {
     background-repeat: no-repeat;
     background-position: 10% 0;
     background-size: 30%;
+    background-clip: border-box;
   }
 
 .jumbotron {
   position: relative;
+  background-clip: padding-box;
+  overflow: hidden; /* The background image below will otherwise spill over, creating a horizontal scroll bar. */
 }
 
   .jumbotron:before {
@@ -37,15 +40,15 @@ footer {
     position: absolute;
     left: 40%;
     top: 10%;
-    width: 150%;
-    height: 150%;
+    width: 100%;
+    height: 100%;
     opacity: 0.3;
     background-image: url("/media/logos/trinity-white.png");
     background-repeat: no-repeat;
     background-position: 10% 0;
-    background-size: 40%;
+    background-size: 60%;
   }
-
+ 
 .locators {
   background-color: var(--light);
 }
